# konnekt

./: CMakeLists.txt  Doxyfile  LICENSE  README.md  conanfile.txt  example1.json  gen_graph.py  graph.json
docs/html/: annotated.html  classdijkstra__result-members.html  classdijkstra__result.html  classedge-members.html  classedge.html  classes.html  classgraph-members.html  classgraph.html  classvertex-members.html  classvertex.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  edge_8h.html  edge_8h_source.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  graph_8h.html  graph_8h_source.html  index.html  ingest_8cpp.html  ingest_8h.html  ingest_8h_source.html  konnekt_8cpp.html  menudata.js  vertex_8h.html  vertex_8h_source.html
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  searchdata.js  (+8 more)
docs/latex/: annotated.tex  classdijkstra__result.tex  classedge.tex  classgraph.tex  classvertex.tex  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.tex  edge_8h.tex  files.tex  graph_8h.tex  ingest_8cpp.tex  ingest_8h.tex  konnekt_8cpp.tex  refman.tex  vertex_8h.tex
source/: edge.h  graph.h  ingest.h  konnekt.cpp  vertex.h
source/test/: test_edge.cpp  test_graph.cpp  test_vertex.cpp
